--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+
+    ext.kotlin_version = '1.6.10'
+    ext.dokka_version = '1.6.10'
+    ext.acelost_group_id = 'io.github.acelost'
+    ext.chrono_library_version = '0.0.5'
+    ext.gradle_nexus_version = '1.1.0'
+
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.novoda:bintray-release:0.9.1'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+        classpath "io.github.gradle-nexus:publish-plugin:$gradle_nexus_version"
     }
 }
 
@@ -27,3 +34,7 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
